feat: virtual data lab

--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
             <h3>2024</h3>
 
             <section>
+              <h4>April</h4>
+              <ul>
+                <li>🎓🥽 Virtual Data Lab is an innovative platform developed as part of a master's thesis project. It
+                  enables immersive data visualization in virtual reality, offering a unique way to explore and analyze
+                  complex datasets. With Virtual Data Lab, users can interactively visualize data in a virtual
+                  environment, unlocking new insights and facilitating deeper understanding of the information
+                  presented.
+                </li>
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/xcSBdKA7b54?mute=1&autoplay=1"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
+
+            <section>
               <h4>February</h4>
               <ul>
                 <li>🎮 Uploaded a new gameplay showcase for my released game <a
@@ -1350,7 +1371,9 @@
               <h3 class="project-name">SCP: Nemesi</h3>
               <p class="project-date">August 2018 (Ongoing)</p>
               <br>
-              <p class="project-description">SCP: Nemesi is a multiplayer survival horror game developed in Unreal
+              <p class="project-description">
+                🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>
+                is a multiplayer survival horror game developed in Unreal
                 Engine 4, drawing inspiration from the renowned SCP (Secure, Contain, Protect) lore. In the game,
                 players have the option to embody an SCP entity or join forces as a group of humans. The
                 immersive maps are intricately designed, mirroring real-life locations across the globe and spanning
@@ -1368,7 +1391,45 @@
 
           </div>
 
+          <!-- QuestDropper (VR), MUNI, CLiGL, jDoom, Music (one slot per track / album), Rainforest, Misc VBA Games, LaS  -->
           
+          <div class="project-row">
+
+            <div class="project-item reversed">
+              <h3 class="project-name">Virtual Data Lab</h3>
+              <p class="project-date">April 2024</p>
+              <br>
+              <p class="project-description">Virtual Data Lab is an innovative platform developed as part of a master's thesis project. It
+                enables immersive data visualization in virtual reality, offering a unique way to explore and analyze
+                complex datasets. With Virtual Data Lab, users can interactively visualize data in a virtual
+                environment, unlocking new insights and facilitating deeper understanding of the information
+                presented.</p>
+                <ul class="project-tools">
+                  <li><img src="./assets/icons/software/icons8-unreal-engine.svg" alt="Unreal Engine 4"></li>
+                  <li><img src="./assets/icons/software/icons8-blender-48.png" alt="Blender"></li>
+                  <li><img src="./assets/icons/software/SteamVR_Logo.jpg" alt="SteamVR"></li>
+                  <li><img src="./assets/icons/software/OpenXR_logo.svg.png" alt="OpenXR"></li>
+                  <li><img src="./assets/icons/software/62a9c7c08ff6441a2952dad3.png" alt="Docker"></li>
+                  <li><img src="./assets/icons/software/Python_logo_51.svg.png" alt="Python"></li>
+                  <li><img src="./assets/icons/software/pngegg.png" alt="Node.js"></li>
+                </ul>
+            </div>
+
+
+            <div class="project-item reversed">
+
+              <div class="grid-container" style="columns: 1 100px;">
+                <div class="yt-container">
+                  <iframe src="https://www.youtube.com/embed/xcSBdKA7b54?mute=1&autoplay=1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen="" class="yt-video"></iframe>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
         </div>
       </div>
 
