--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </svg> -->
       <h1>Alfredo Bellani</h1>
       <h2>A chronological representation of my portfolio, spanning from the current day to my earliest works.</h2>
-      <h2>You can also switch to <div class="switch" onclick="toggleTimeline()">project view.<div>
+      <h2>You can also switch to <div class="switch" id="switch" onclick="toggleTimeline()">project view.<div>
       </h2>
     </div>
 
@@ -1354,6 +1354,44 @@
         <div>
 
           <div class="project-row">
+
+            <div class="project-item reversed">
+              <h3 class="project-name">Virtual Data Lab</h3>
+              <p class="project-date">April 2024</p>
+              <br>
+              <p class="project-description">Virtual Data Lab is an innovative platform developed as part of a master's thesis project. It
+                enables immersive data visualization in virtual reality, offering a unique way to explore and analyze
+                complex datasets. With Virtual Data Lab, users can interactively visualize data in a virtual
+                environment, unlocking new insights and facilitating deeper understanding of the information
+                presented.</p>
+                <ul class="project-tools">
+                  <li><img src="./assets/icons/software/icons8-unreal-engine.svg" alt="Unreal Engine 4"></li>
+                  <li><img src="./assets/icons/software/icons8-blender-48.png" alt="Blender"></li>
+                  <li><img src="./assets/icons/software/SteamVR_Logo.jpg" alt="SteamVR"></li>
+                  <li><img src="./assets/icons/software/OpenXR_logo.svg.png" alt="OpenXR"></li>
+                  <li><img src="./assets/icons/software/62a9c7c08ff6441a2952dad3.png" alt="Docker"></li>
+                  <li><img src="./assets/icons/software/Python_logo_51.svg.png" alt="Python"></li>
+                  <li><img src="./assets/icons/software/pngegg.png" alt="Node.js"></li>
+                </ul>
+            </div>
+
+
+            <div class="project-item reversed">
+
+              <div class="grid-container" style="columns: 1 100px;">
+                <div class="yt-container">
+                  <iframe src="https://www.youtube.com/embed/xcSBdKA7b54?mute=1&autoplay=1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen="" class="yt-video"></iframe>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+
+          <div class="project-row">
             <div class="project-item">
 
               <div class="grid-container" style="columns: 1 100px;">
@@ -1393,42 +1431,6 @@
 
           <!-- QuestDropper (VR), MUNI, CLiGL, jDoom, Music (one slot per track / album), Rainforest, Misc VBA Games, LaS  -->
           
-          <div class="project-row">
-
-            <div class="project-item reversed">
-              <h3 class="project-name">Virtual Data Lab</h3>
-              <p class="project-date">April 2024</p>
-              <br>
-              <p class="project-description">Virtual Data Lab is an innovative platform developed as part of a master's thesis project. It
-                enables immersive data visualization in virtual reality, offering a unique way to explore and analyze
-                complex datasets. With Virtual Data Lab, users can interactively visualize data in a virtual
-                environment, unlocking new insights and facilitating deeper understanding of the information
-                presented.</p>
-                <ul class="project-tools">
-                  <li><img src="./assets/icons/software/icons8-unreal-engine.svg" alt="Unreal Engine 4"></li>
-                  <li><img src="./assets/icons/software/icons8-blender-48.png" alt="Blender"></li>
-                  <li><img src="./assets/icons/software/SteamVR_Logo.jpg" alt="SteamVR"></li>
-                  <li><img src="./assets/icons/software/OpenXR_logo.svg.png" alt="OpenXR"></li>
-                  <li><img src="./assets/icons/software/62a9c7c08ff6441a2952dad3.png" alt="Docker"></li>
-                  <li><img src="./assets/icons/software/Python_logo_51.svg.png" alt="Python"></li>
-                  <li><img src="./assets/icons/software/pngegg.png" alt="Node.js"></li>
-                </ul>
-            </div>
-
-
-            <div class="project-item reversed">
-
-              <div class="grid-container" style="columns: 1 100px;">
-                <div class="yt-container">
-                  <iframe src="https://www.youtube.com/embed/xcSBdKA7b54?mute=1&autoplay=1"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen="" class="yt-video"></iframe>
-                </div>
-              </div>
-
-            </div>
-          </div>
 
         </div>
       </div>
