feat: new SCP: Nemesi video

--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@
 
               <div class="grid-container" style="columns: 1 100px;">
                 <div class="yt-container">
-                  <iframe src="https://www.youtube.com/embed/BnfRlCHK9IU?mute=1&amp;autoplay=1"
+                  <iframe src="https://www.youtube.com/embed/4AACz-gTDkI?mute=1&amp;autoplay=1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen="" class="yt-video"></iframe>
