feat: hr improved layout

--- a/index.html
+++ b/index.html
@@ -1394,6 +1394,7 @@
             </div>
           </div>
 
+          <hr class="minimal">
 
           <div class="project-row">
             <div class="project-item">
